trying to fix image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ zoom: 12 // starting zoom
 });
 
 map.on('load', function() {
-map.loadImage('https://mvaccess.github.io/cannabismap/pot.svg', function(error, image) {
+map.loadImage('https://mvaccess.github.io/cannabismap/pot.png', function(error, image) {
 if (error) throw error;
 map.addImage('cat', image);
 map.addLayer({
