Trying to import a geojson file

--- a/index.html
+++ b/index.html
@@ -32,16 +32,7 @@ map.addLayer({
 "type": "symbol",
 "source": {
 "type": "geojson",
-"data": {
-"type": "FeatureCollection",
-"features": [{
-"type": "Feature",
-"geometry": {
-"type": "Point",
-"coordinates": [-122.0839, 37.3861]
-}
-}]
-}
+"data": 'https://mvaccess.github.io/cannabismap/storefront.geojson'
 },
 "layout": {
 "icon-image": "cat",
