--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@ map.addLayer({
 	'type': 'fill',
 	'source': {
 		'type': 'geojson',
-		'data': 'https://mvaccess.github.io/cannabismap/city.geojson',
+		'data': 'https://mvaccess.github.io/cannabismap/city.geojson'
 	}
+	'layout': {},
 	'paint': {
 	'fill-color': '#088',
 	'fill-opacity': 0.8
