more error fixing

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ map.addLayer({
 		}
 });
 });
-map.addLayer({
+<!-- map.addLayer({
 	'id': 'maine',
 	'type': 'fill',
 	'source': {
@@ -52,7 +52,7 @@ map.addLayer({
 	'fill-color': '#088',
 	'fill-opacity': 0.8
 	}
-});
+}); -->
 });
 </script>
  
