--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@ map.addLayer({
 });
 });
 <!-- map.addLayer({
-	'id': 'maine',
-	'type': 'fill',
-	'source': {
-		'type': 'geojson',
-		'data': 'https://mvaccess.github.io/cannabismap/city.geojson'
-	}
-	'layout': {},
-	'paint': {
-	'fill-color': '#088',
-	'fill-opacity': 0.8
-	}
-}); -->
+//	'id': 'maine',
+//	'type': 'fill',
+//	'source': {
+//		'type': 'geojson',
+//		'data': 'https://mvaccess.github.io/cannabismap/city.geojson'
+//	}
+//	'layout': {},
+//	'paint': {
+//	'fill-color': '#088',
+//	'fill-opacity': 0.8
+//	}
+//}); -->
 });
 </script>
  
