--- a/index.html
+++ b/index.html
@@ -1,60 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset='utf-8' />
-<title>Mountain View Cannabis Buffer Zone Map</title>
-<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
-<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
-<style>
-body { margin:0; padding:0; }
-#map { position:absolute; top:0; bottom:0; width:100%; }
-</style>
+  <meta charset='utf-8' />
+  <title>Display a map</title>
+  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
+  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
+  <style>
+    body { margin:0; padding:0; }
+    #map { position:absolute; top:0; bottom:0; width:100%; }
+  </style>
 </head>
 <body>
- 
+
 <div id='map'></div>
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiZW5naW5lZXJlbWlseSIsImEiOiJjaWdvcTNqMGkwMDhxdDdrbnhjaW1qOTE0In0.GUfQCFjRMIHLU0YSw98cYw';
-var map = new mapboxgl.Map({
-container: 'map', // container id
-style: 'mapbox://styles/mapbox/streets-v9', // stylesheet location
-center: [-122.0839, 37.3861], // starting position [lng, lat]
-zoom: 12 // starting zoom
+const map = new mapboxgl.Map({
+  container: 'map',
+  style: 'mapbox://styles/engineeremily/cjt53ct6i49f81fqfsc739bia',
+  center: [-122.066981, 37.392169],
+  zoom: 13.3
 });
-
-map.on('load', function() {
-map.loadImage('https://mvaccess.github.io/cannabismap/pot.png', function(error, image) {
-if (error) throw error;
-map.addImage('cat', image);
-map.addLayer({
-	"id": "points",
-	"type": "symbol",
-	"source": {
-		"type": "geojson",
-		"data": 'https://mvaccess.github.io/cannabismap/storefront.geojson'
-		},
-	"layout": {
-		"icon-image": "cat",
-		"icon-size": 0.25
-		}
-});
-});
-<!-- map.addLayer({
-//	'id': 'maine',
-//	'type': 'fill',
-//	'source': {
-//		'type': 'geojson',
-//		'data': 'https://mvaccess.github.io/cannabismap/city.geojson'
-//	}
-//	'layout': {},
-//	'paint': {
-//	'fill-color': '#088',
-//	'fill-opacity': 0.8
-//	}
-//}); -->
-});
+// Add zoom and rotation controls to the map.
+map.addControl(new mapboxgl.NavigationControl());
 </script>
- 
+
 </body>
 </html>
