--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ map.on('load', function () {
         'type': 'fill',
         'source': {
             'type': 'geojson',
-            'data': 'https://mvaccess.github.io/cannabismap/city.geojson'
+            'data': 'https://mvaccess.github.io/cannabismap/export.geojson'
         },
         'layout': {},
         'paint': {
