--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <div id='map'></div>
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiZW5naW5lZXJlbWlseSIsImEiOiJjaWdvcTNqMGkwMDhxdDdrbnhjaW1qOTE0In0.GUfQCFjRMIHLU0YSw98cYw';
+var schools = 'https://mvaccess.github.io/cannabismap/export.geojson';
+var buffered = turf.buffer(point, 500, {units: 'miles'}); 
 const map = new mapboxgl.Map({
   container: 'map',
   style: 'mapbox://styles/engineeremily/cjt53ct6i49f81fqfsc739bia',
@@ -24,7 +26,7 @@ const map = new mapboxgl.Map({
   zoom: 13.3
 });
 map.on('load', function () {
-
+	
     map.addLayer({
         'id': 'maine',
         'type': 'fill',
