fine! I'll remove the damn variables!

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <div id='map'></div>
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiZW5naW5lZXJlbWlseSIsImEiOiJjaWdvcTNqMGkwMDhxdDdrbnhjaW1qOTE0In0.GUfQCFjRMIHLU0YSw98cYw';
-var schools = 'https://mvaccess.github.io/cannabismap/export.geojson';
-var buffered = turf.buffer(point, 500, {units: 'miles'}); 
+//var schools = 'https://mvaccess.github.io/cannabismap/export.geojson';
+//var buffered = turf.buffer(point, 500, {units: 'miles'}); 
 const map = new mapboxgl.Map({
   container: 'map',
   style: 'mapbox://styles/engineeremily/cjt53ct6i49f81fqfsc739bia',
