--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div id='map'></div>
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiZW5naW5lZXJlbWlseSIsImEiOiJjaWdvcTNqMGkwMDhxdDdrbnhjaW1qOTE0In0.GUfQCFjRMIHLU0YSw98cYw';
-//var schools = 'https://mvaccess.github.io/cannabismap/export.geojson';
+var schools = 'https://mvaccess.github.io/cannabismap/export.geojson';
 //var buffered = turf.buffer(point, 500, {units: 'miles'}); 
 const map = new mapboxgl.Map({
   container: 'map',
