changing miles to feet if that helps with the errors at all...

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiZW5naW5lZXJlbWlseSIsImEiOiJjaWdvcTNqMGkwMDhxdDdrbnhjaW1qOTE0In0.GUfQCFjRMIHLU0YSw98cYw';
 var schools = 'https://mvaccess.github.io/cannabismap/export.geojson';
-var buffered = turf.buffer(schools, 500, {units: 'miles'}); 
+var buffered = turf.buffer(schools, 650, {units: 'feet'}); 
 const map = new mapboxgl.Map({
   container: 'map',
   style: 'mapbox://styles/engineeremily/cjt53ct6i49f81fqfsc739bia',
