--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div id='map'></div>
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiZW5naW5lZXJlbWlseSIsImEiOiJjaWdvcTNqMGkwMDhxdDdrbnhjaW1qOTE0In0.GUfQCFjRMIHLU0YSw98cYw';
-var schools = 'https://mvaccess.github.io/cannabismap/export.geojson';
+var schools = turf.schools('https://mvaccess.github.io/cannabismap/export.geojson');
 var buffered = turf.buffer(schools, 650, {units: 'feet'}); 
 const map = new mapboxgl.Map({
   container: 'map',
