Not fixing what's broken, but creating a local library for the buffer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body { margin:0; padding:0; }
     #map { position:absolute; top:0; bottom:0; width:100%; }
   </style>
-  <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
+  <script src="turf.min.js" charset="utf-8"></script>
 </head>
 <body>
 
