--- a/buffer.html
+++ b/buffer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8' />
   <title>Buffer code testing</title>
-  <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
+  <script src="turf.min.js" charset="utf-8"></script>
 </head>
 <body>
 
