--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiZW5naW5lZXJlbWlseSIsImEiOiJjaWdvcTNqMGkwMDhxdDdrbnhjaW1qOTE0In0.GUfQCFjRMIHLU0YSw98cYw';
 
-var poly = turf.multiPolygon('https://mvaccess.github.io/cannabismap/export.geojson');
+var poly = turf.multiPolygon('https://mvaccess.github.io/cannabismap/schools.geojson');
 var buffered = turf.buffer(poly, 650, {units: 'feet'}); 
 
 const map = new mapboxgl.Map({
