--- a/buffer.html
+++ b/buffer.html
@@ -9,7 +9,7 @@
 
 <div id='map'></div>
 <script>
-var poly = turf.multiPolygon('https://mvaccess.github.io/cannabismap/export.geojson');
+var poly = turf.multiPolygon('https://mvaccess.github.io/cannabismap/schools.geojson');
 var buffered = turf.buffer(poly, 650, {units: 'feet'}); 
 console.log(buffered)
 </script>
