--- a/buffer.html
+++ b/buffer.html
@@ -6,11 +6,10 @@
   <script src="turf.min.js" charset="utf-8"></script>
 </head>
 <body>
-
-<div id='map'></div>
 <script>
 var poly = turf.multiPolygon('https://mvaccess.github.io/cannabismap/schools.geojson');
 var buffered = turf.buffer(poly, 650, 'feet'); 
+console.log(poly)
 console.log(buffered)
 </script>
 
