Removing some polygons

--- a/buffer.html
+++ b/buffer.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <script>
-var poly = turf.multiPolygon('https://mvaccess.github.io/cannabismap/schools.geojson');
+var poly = turf.multiPolygon('https://mvaccess.github.io/cannabismap/schools1.geojson');
 var buffered = turf.buffer(poly, 650, {units: 'feet'}); 
 console.log(poly)
 console.log(buffered)
