--- a/buffer.html
+++ b/buffer.html
@@ -8,7 +8,7 @@
 <body>
 <script>
 var poly = turf.multiPolygon('https://mvaccess.github.io/cannabismap/schools1.geojson');
-var buffered = turf.buffer(poly, 650, {units: 'feet'}); 
+var buffered = turf.buffer(poly, 650, {units: 'miles'}); 
 console.log(poly)
 console.log(buffered)
 </script>
