--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiZW5naW5lZXJlbWlseSIsImEiOiJjaWdvcTNqMGkwMDhxdDdrbnhjaW1qOTE0In0.GUfQCFjRMIHLU0YSw98cYw';
 
-var poly = turf.multiPolygon('https://mvaccess.github.io/cannabismap/test.geojson');
-var buffered = turf.buffer(poly, 650, {units: 'feet'}); 
+// var poly = turf.multiPolygon('https://mvaccess.github.io/cannabismap/test.geojson');
+var buffered = turf.buffer('https://mvaccess.github.io/cannabismap/test.geojson', 650, {units: 'feet'}); 
 
 const map = new mapboxgl.Map({
   container: 'map',
