--- a/index.html
+++ b/index.html
@@ -26,39 +26,7 @@ const map = new mapboxgl.Map({
   zoom: 13.3
 });
 
-//var poly = turf.multiPolygon('https://mvaccess.github.io/cannabismap/test.geojson');
-var poly = {
-    'type': 'Feature',
-    'geometry': {
-      'type': 'Polygon',
-      'coordinates': [[
-            [
-              -122.08488464355469,
-              37.3928002484491
-            ],
-            [
-              -122.08642959594727,
-              37.385980767871416
-            ],
-            [
-              -122.07664489746094,
-              37.38379840307495
-            ],
-            [
-              -122.07286834716795,
-              37.39157278772586
-            ],
-            [
-              -122.08488464355469,
-              37.3928002484491
-            ]]
-			]
-    },
-    'properties': {
-      'name': 'Null Island'
-    }
-  };
-
+var poly = turf.multiPolygon('https://mvaccess.github.io/cannabismap/test.geojson');
 var buffered = turf.buffer(poly, 650, {units: 'feet'}); 
 
 map.on('load', function () {
@@ -68,7 +36,7 @@ map.on('load', function () {
         'type': 'fill',
         'source': {
             'type': 'geojson',
-            'data': 'https://mvaccess.github.io/cannabismap/test.geojson'
+            'data': buffered
         },
         'layout': {},
         'paint': {
