--- a/buffer.html
+++ b/buffer.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <script>
-var poly = turf.multiPolygon('https://mvaccess.github.io/cannabismap/schools1.geojson');
-//var buffered = turf.buffer(poly, 650, {units: 'miles'}); 
+var multiPolygon = turf.multiPolygon('https://mvaccess.github.io/cannabismap/schools1.geojson');
+var buffered = turf.buffer(multiPolygon, 650, {units: 'miles'}); 
 console.log(poly)
 console.log(buffered)
 </script>
