--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 <div id='map'></div>
 <script>
 var person = 650;
-var zone = person;
 function myFunction() {
   person = prompt("Please enter the buffer in feet", "650");
     if (isNaN(person) || person < 1 || person > 10000) {
     alert("Input not valid");
   } else {
     alert("Input OK");
-	var zone = person;
+	return person;
   };
 }
+var zone = myFunction();
 mapboxgl.accessToken = 'pk.eyJ1IjoiZW5naW5lZXJlbWlseSIsImEiOiJjaWdvcTNqMGkwMDhxdDdrbnhjaW1qOTE0In0.GUfQCFjRMIHLU0YSw98cYw';
 const map = new mapboxgl.Map({
   container: 'map',
