--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
     #map { position:absolute; top:0; bottom:0; width:100%; }
   </style>
 </head>
-<body onload="myFunction()">
+<body>
 
 <div id='map'></div>
 <script>
-var person = 650;
 function myFunction() {
-  person = prompt("Please enter the buffer in feet", "650");
+  var person = prompt("Please enter the buffer in feet", "650");
     if (isNaN(person) || person < 1 || person > 10000) {
     alert("Input not valid");
   } else {
